build_output_clean_3.txt

> Configure project :
Fabric Loom: 1.15.3

> Task :clean
> Task :compileJava
> Task :processResources
> Task :classes

> Task :compileClientJava
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\LeftClickEtherwarp.java:54: error: cannot find symbol
        if (!BomboConfig.leftClickEtherwarp)
                        ^
  symbol:   variable leftClickEtherwarp
  location: class BomboConfig
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\SBECommands.java:27: error: cannot find symbol
        if (!BomboConfig.sbeCommands) {
                        ^
  symbol:   variable sbeCommands
  location: class BomboConfig
Note: C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BazaarUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors

> Task :compileClientJava FAILED

[Incubating] Problems report is available at: file:///C:/Users/frand/Documents/bomboaddons-1.21.10/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileClientJava'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BazaarUtils.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\LeftClickEtherwarp.java:54: error: cannot find symbol
          if (!BomboConfig.leftClickEtherwarp)
                          ^
    symbol:   variable leftClickEtherwarp
    location: class BomboConfig
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\SBECommands.java:27: error: cannot find symbol
          if (!BomboConfig.sbeCommands) {
                          ^
    symbol:   variable sbeCommands
    location: class BomboConfig
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.3.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
4 actionable tasks: 4 executed
